--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
@@ -9,10 +9,7 @@
 
 			<div class="profile-info">
 				<div class="profile-image bg-cover" data-bind="image: {
-				queries: [
-					[$root.MediaQueries.X_SMALL, author.image.normal ],
-					[$root.MediaQueries.SMALL, author.image.small]
-				],
+				image: author.image,
 				state: $root.deviceState()
 			}"></div>
 
