--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
@@ -1,14 +1,8 @@
 <div class="component-block-hero-secondary">
 	<figure class="abs-fill">
 		<img class="abs-fill-center" data-bind="
-			attr: {
-				alt: data.background.alt
-			},
 			image: {
-				queries: [
-					[$root.MediaQueries.SMALL, data.background.small ],
-					[$root.MediaQueries.SMALL_MIN, data.background.normal]
-				],
+				image: data.background,
 				state: $root.deviceState()
 			}" />
 	</figure>
