--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-with-content/block-image-with-content.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-with-content/block-image-with-content.html
@@ -7,10 +7,7 @@
 						alt: data.background.alt
 					},
 					image: {
-						queries: [
-							[$root.MediaQueries.SMALL, data.background.small ],
-							[$root.MediaQueries.SMALL_MIN, data.background.normal]
-						],
+						image: data.background,
 						state: $root.deviceState()
 					}" />
 			</figure>
