--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-small-image/block-small-image.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-small-image/block-small-image.html
@@ -1,9 +1,6 @@
 <div class="component-block-small-image" data-bind="css: alignmentClass, with: data">
 	<img src="" data-bind="image: {
-		queries: [
-			[$root.MediaQueries.X_SMALL, image.small ],
-			[$root.MediaQueries.SMALL, image.normal]
-		],
-		state: $root.deviceState()
+				image: data.image,
+				state: $root.deviceState()
 	}"/>
 </div>
