--- a/deploy/htdocs/version/src/inc/style/page/_index.scss
+++ b/deploy/htdocs/version/src/inc/style/page/_index.scss
@@ -10,8 +10,10 @@
 	z-index: zindex($layout, content);
 
 	[data-gaia-container="index"] {
+		width: 100%;
 		z-index: 0;
 		position: relative;
+		overflow: hidden;
 	}
 
 	@include respond-to(SMALL) {
@@ -32,6 +34,8 @@
 		font-size: 0;
 		display: none;
 		backface-visibility: hidden;
+		white-space: nowrap;
+		overflow: hidden;
 
 		.base-grid {
 			@include size(100%);
@@ -78,5 +82,16 @@
 			display: block;
 		}
 
+
+		@include respond-to(SMALL) {
+			@include size(100vw, 100vh);
+			@include pos(0, 0, 0, 0);
+			overflow: hidden;
+			transform: none;
+
+			.angle-grid {
+				@include size(100vh);
+			}
+		}
 	}
 }
