refactor gridsizing for mobile.

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -44,6 +44,13 @@
 			}
 		}
 	}
+
+	@include respond-to(SMALL) {
+		&.windowed {
+			border-left: none;
+			border-right: none;
+		}
+	}
 }
 
 // import all your components here!
