--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -23,6 +23,7 @@ $baseFontSize: 10px;
  */
 $sizeGrid: 4rem;
 $sizeGridSecondary: 3rem;
+$sizeGridMobile: 3.2rem;
 $sizeHeader: $sizeGrid * 2;
 
 /**
