Update the footer

--- a/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
@@ -56,7 +56,7 @@
 			</ul>
 		</nav>
 		<nav class="call-to-actions right">
-			<ul class="full-list">
+			<ul class="full-list social">
 				<li>
 					<a href="#">
 						<span class="icon" data-bind="icon: 'twitter'"></span>
