--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-network-overview/block-network-overview.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-network-overview/block-network-overview.html
@@ -1,13 +1,13 @@
 <div class="component-block-network-overview" data-bind="with: data">
 	<div class="overrule-overlap network-list-wrapper">
 		<div class="js-draggable-container">
-			<div class="network-list js-draggable-element" data-bind="">
+			<div class="network-list js-draggable-element">
 
 				<div class="network-row" data-bind="foreach: items">
 					<!-- ko if: $index() % 2 == 0 -->
 						<a class="network-list-item bg-contain" href="" data-bind="gaiaOpenLink: $data.link">
 							<span class="network-logo abs-fill bg-contain" data-bind="image: {
-								image: data.image,
+								image: $data.image,
 								state: $root.deviceState()
 							}"></span>
 						</a>
@@ -18,7 +18,7 @@
 					<!-- ko ifnot: $index() % 2 == 0 -->
 						<a class="network-list-item bg-contain" href="" data-bind="gaiaOpenLink: $data.link">
 								<span class="network-logo abs-fill bg-contain" data-bind="image: {
-									image: data.image,
+									image: $data.image,
 									state: $root.deviceState()
 								}"></span>
 						</a>
