--- a/deploy/htdocs/version/src/inc/script/app/component/program-module-item/program-module-item.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/program-module-item/program-module-item.html
@@ -3,10 +3,7 @@
 	<div class="placeholder">
 		<div class="hover-container">
 			<div class="image abs-fill bg-cover" data-bind="image: {
-				queries: [
-					[$root.MediaQueries.X_SMALL, image.normal ],
-					[$root.MediaQueries.SMALL, image.small]
-				],
+				image: $data.image,
 				state: $root.deviceState()
 			}"></div>
 		</div>
