--- a/deploy/htdocs/version/src/inc/style/component/_menu.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_menu.scss
@@ -38,7 +38,7 @@
 
 	.subtitle {
 		color: $colorSecondary;
-		font: 400 1.4rem / 2.3rem $fontOpenSans;
+		font: 400 1.4rem / 1.64 $fontOpenSans;
 		margin-left: $sizeGrid * 1.5;
 		opacity: 0;
 		visibility: hidden;
@@ -50,7 +50,7 @@
 	}
 
 	.main-link {
-		font: 400 2.4rem / 3rem $fontOpenSans;
+		font: 400 2.4rem / 1.25 $fontOpenSans;
 		text-decoration: none;
 		color: $colorWhite;
 		display: block;
@@ -66,6 +66,28 @@
 			content: '';
 			opacity: 0;
 			transition: opacity .2s ease(easeInOut);
+		}
+	}
+
+	@include respond-to(SMALL) {
+		@include size(100%, calc(100vh - #{$sizeGrid * 4}));
+		top: $sizeGrid * 4;
+
+		.main-link {
+			font-size: mobile-size(3.2rem);
+		}
+
+		.subtitle {
+			font-size: mobile-size(2.8rem);
+		}
+
+		.menu-item {
+			max-height: 100%;
+		}
+
+		.subtitle {
+			opacity: 1;
+			visibility: visible;
 		}
 	}
 }
