--- a/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
@@ -1,5 +1,5 @@
 .component-button-call-to-reach {
-	@include size(auto,  $sizeGrid * 2);
+	@include size(auto, $sizeGrid * 2);
 	text-transform: uppercase;
 	color: $colorPrimary;
 	padding: 0 $sizeGrid / 2;
@@ -11,11 +11,25 @@
 	}
 
 	.icon {
-		@include size($sizeIcon);
+		@include size($sizeGrid);
 		margin-right: $sizeGrid / 2;
 
 		path {
 			fill: currentColor;
+		}
+	}
+
+	@include respond-to(SMALL) {
+		@include size(auto, $sizeGrid * 4);
+		padding: 0 $sizeGrid;
+
+		.text {
+			font-size: mobile-size(2.2rem);
+		}
+
+		.icon {
+			@include size($sizeGrid * 1.5);
+			margin-right: $sizeGrid;
 		}
 	}
 }
