--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-call-to-actions/block-image-call-to-actions.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-call-to-actions/block-image-call-to-actions.html
@@ -1,5 +1,5 @@
 <div class="component-block-image-call-to-actions" data-bind="css: {'windowed': data.windowed}">
-	<div class="abs-fill">
+	<div class="call-to-actions-wrapper abs-fill">
 		<div class="call-to-actions-images abs-fill" data-bind="foreach: data.callToActions">
 			<div class="call-to-action-image abs-fill" data-bind="css: {
 					'is-active': $index() === $root.activeImageIndex()
