Change margin on the footer

--- a/deploy/htdocs/version/src/inc/style/component/_footer.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_footer.scss
@@ -152,7 +152,7 @@
 		}
 
 		.bottom-section {
-			padding-bottom: $sizeGrid * 2;
+			padding: $sizeGrid 0 $sizeGrid * 2;
 		}
 
 		.call-to-actions {
