--- a/deploy/htdocs/version/src/inc/style/type/_heading.scss
+++ b/deploy/htdocs/version/src/inc/style/type/_heading.scss
@@ -62,7 +62,14 @@
 	.heading-01 {
 		font-size: mobile-size(8rem);
 	}
+	.heading-03 {
+		font-size: mobile-size(5rem);
+	}
 	.heading-06 {
 		font-size: mobile-size(5rem);
 	}
+	.heading-07 {
+		font-size: mobile-size(3.5rem);
+	}
+
 }
