fix data in template.

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-carousel/block-image-carousel.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-carousel/block-image-carousel.html
@@ -6,7 +6,7 @@
 					<figure class="abs-fill">
 						<img data-bind="
 								image: {
-							image: data.image,
+							image: $data.image,
 							state: $root.deviceState()
 						}"/>
 						<!-- ko if: heading -->
