--- a/deploy/htdocs/version/src/inc/style/asset/_scrollbar.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_scrollbar.scss
@@ -64,6 +64,7 @@
 		display: block;
 		height: 100px;
 		background: $colorSecondary;
+		z-index: 1;
 
 		.rgba & {
 			background: rgba($colorSecondary, .75);
